Fixed text overflow issue

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ body{
     color: white;
     text-align: center;
     font-family: 'Segoe UI', sans-serif;
-    font-size: 50;
+    font-size: 2.7vw;
 }
 
 #titleContainer p span {
@@ -206,7 +206,7 @@ body{
 
 .textCenter{
     font-family: 'Segoe UI', sans-serif;
-    font-size: 28;
+    font-size: 1.6vw;
     text-align: center;
     color: white;
     margin: 0;
@@ -214,7 +214,7 @@ body{
 
 .text{
     font-family: 'Segoe UI', sans-serif;
-    font-size: 28;
+    font-size: 1.6vw;
     color: white;
     margin: 0;
 }
@@ -306,8 +306,8 @@ body{
 }
 
 #lamKunstwerk{
-    height: 500px;
-    width: 850px;
+    height: 51%;
+    width: 70%;
     position: relative;
     display: block;
     margin-top: 5%;
@@ -325,7 +325,7 @@ body{
 
 .reviewText{
     font-family: 'Poor Richard', sans-serif;
-    font-size: 40;
+    font-size: 2.1vw;
     color: white;
     margin: 0;
 }
@@ -333,7 +333,7 @@ body{
 #userReviewHeader {
     text-align: center;
     font-family: 'Poor Richard', sans-serif;
-    font-size: 58;
+    font-size: 3.4vw;
     color: white;
     margin: 0;
 }
@@ -346,14 +346,14 @@ body{
 }
 
 #userReview2{
-    margin-top: 9%;
+    margin-top: 14%;
     margin-left: 55%;
     width: 40%;
     height: 10%;
 }
 
 #userReview3{
-    margin-top: 12%;
+    margin-top: 9%;
     margin-left: 11%;
     width: 40%;
     height: 10%;
